--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,7 @@
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
-  font-family: sans-serif;
+  @apply text-gray-800 bg-white;
 }
